# youtube-mcp-server

./: .env.example  .gitignore  EXAMPLES.md  LICENSE  README.md  TERMINAL_UPLOAD.md  open_repo.sh  pyproject.toml  requirements.txt  test_setup.py  youtube-upload  youtube_cli.py  youtube_uploader.py
